# scholar_scraper

./: .gitignore  Cargo.toml  LICENSE  authorlist.csv  build.sh
src/: backend.rs  error.rs  main.rs
src/backend/: app.rs  csv.rs  google_scholar.rs  log.rs  scholar_model.rs  utils.rs
src/backend/csv/: export.rs  load.rs  model.rs
