[package]
name = "scholar_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
reqwest = "0.12.12"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_derive = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }

thiserror = "1"

log = "0.4.25"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
once_cell = "1.20.3"
chrono = "0.4.39"

# [dev-dependencies]
# anyhow = "1"
